# readbench

./: CMakeLists.txt  readbench.cpp  readbench.h  readbench_aioread.cpp  readbench_aioread.h  readbench_cat.cpp  readbench_cat.h  readbench_fread.cpp  readbench_fread.h  readbench_mmap.cpp  readbench_mmap.h  readbench_popcnt.h  safe-read.cpp  safe-read.h
